apps/base/nemmest/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nemmest
  labels:
    podmonitorscrape: "true"
