apps/base/nemmest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nemmest
  namespace: nemmest
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nemmest
  template:
    metadata:
      labels:
        app: nemmest
        app.kubernetes.io/name: nemmest
        app.kubernetes.io/instance: nemmest
    spec:
      containers:
        - name: nemmest
          image: ghcr.io/skjoedt/nemmest:latest
          ports:
            - containerPort: 3000
              name: http-nemmest
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
