apps/base/nemmest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nemmest
  namespace: nemmest
spec:
  selector:
    app: nemmest
  ports:
    - name: http-nemmest
      protocol: TCP
      port: 3000
      targetPort: http-nemmest
