apps/base/nemmest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nemmest
  namespace: nemmest
spec:
  ingressClassName: traefik
  rules:
    - host: nem.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nemmest
                port:
                  name: http-nemmest
