apps/base/nemmest/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nemmest-route
  namespace: nemmest
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - nem.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nemmest
          port: 3000
